--- a/main.html
+++ b/main.html
@@ -1,11 +1,23 @@
 <!DOCTYPE html>
-<html>
-  <head>
-  </head>
-  <body>
-    Enter your name: <input type="text" id="fname">
-	
-	<script type="text/javascript" src="./script.js">
-	</script>
-  </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Uppercase Name</title>
+</head>
+<body>
+    <label for="fname">Enter your name:</label>
+    <input type="text" id="fname">
+
+    <script>
+        // Function to convert the content to uppercase when the input loses focus
+        function convertToUppercase() {
+            var inputField = document.getElementById("fname");
+            inputField.value = inputField.value.toUpperCase();
+        }
+
+        // Attach the convertToUppercase function to the blur event of the input field
+        document.getElementById("fname").addEventListener("blur", convertToUppercase);
+    </script>
+</body>
 </html>
